2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.4.0 RC2.

2023-12-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.4.0 RC1.

2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Enable mos65c02 port.

2023-12-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc.ini,
	  sdcc_rw.ini,
	  regtests.php,
	  get_regtest.php,
	  download_regtests_db.php,
	  update_regtests_db.php,
	  left_menu.inc:
	  Removed unused "regression test database" section from site, patch by Mark Gallagher.

2023-11-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Various updates.

2023-10-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* snapshots.desc/aarch64-unknown-freebsd13.2.desc:
	  Description for Debian GNU/Linux on powerpc64 snapshots.

2023-08-17 Benedikt Freisen <b.freisen AT gmx.net>

	* snapshots.desc/docs.desc:
	  Improve description of documentation snapshots.

2023-08-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* snapshots.desc/aarch64-unknown-freebsd13.2.desc:
	  Description for FreeBSD 13.2 on aarch64 snapshots.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.3.0.

2023-06-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php,
	  previous.php:
	  Announce SDCC 4.3.0 RC1.

2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* images/sdcc.svg,
	  index.php,
	  links.php,
	  previous.php,
	  regtests.php,
	  snap_header.php:
	  Use new SDCC logo as favicon.

2023-01-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* Add missing closing parenthesis

2023-01-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* snap.php: don't misrecognize lines beginning with
	  numbers as failure counts

2022-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* snapshots.desc/aarch64-linux-gnu.desc:
	  Description for Debian GNU/Linux on AArch 64 machine.
