@@ -1,3 +1,9 @@
+2024-01-22 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* index.php,
+	  previous.php:
+	  Announce SDCC 4.4.0 RC3.
+
 2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* index.php:
